@@ -2,12 +2,10 @@ package com.xpert.audit;
 
 import com.xpert.AuditDAO;
 import com.xpert.Configuration;
-import com.xpert.DAO;
 import com.xpert.audit.model.AbstractAuditing;
 import com.xpert.audit.model.AbstractMetadata;
 import com.xpert.audit.model.AuditingType;
 import com.xpert.faces.primefaces.LazyDataModelImpl;
-import com.xpert.faces.primefaces.PrimeFacesUtils;
 import com.xpert.persistence.dao.BaseDAO;
 import com.xpert.persistence.query.Restriction;
 import com.xpert.persistence.query.RestrictionType;
@@ -17,7 +15,11 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.annotation.PostConstruct;
+import jakarta.annotation.PostConstruct;
+import jakarta.faces.view.ViewScoped;
+import jakarta.inject.Named;
+import java.lang.reflect.InvocationTargetException;
+import java.util.stream.Collectors;
 import org.apache.commons.beanutils.PropertyUtils;
 import org.primefaces.model.LazyDataModel;
 
@@ -25,10 +27,14 @@ import org.primefaces.model.LazyDataModel;
  *
  * @author ayslan
  */
+@Named("auditDeleteBean")
+@ViewScoped
 public class AuditDeleteBean implements Serializable {
 
+    private static final long serialVersionUID = -2653891634297925727L;
+
     private static final Logger logger = Logger.getLogger(AuditDeleteBean.class.getName());
-    private Class entity;
+    private Class entityClass;
     private LazyDataModel<AbstractAuditing> auditings;
     private BaseDAO baseDAO;
 
@@ -37,19 +43,15 @@ public class AuditDeleteBean implements Serializable {
         baseDAO = new AuditDAO(Configuration.getAuditingImplClass());
     }
 
-    public boolean isPrimeFaces3() {
-        return PrimeFacesUtils.isVersion3();
-    }
-
-    public void load(Class entity) {
-        this.entity = entity;
+    public void load(Class clazz) {
+        this.entityClass = clazz;
         load();
     }
 
     public void load() {
-        if (entity != null) {
+        if (entityClass != null) {
             List<Restriction> restrictions = new ArrayList<>();
-            restrictions.add(new Restriction("entity", Audit.getEntityName(entity)));
+            restrictions.add(new Restriction("entity", Audit.getEntityName(entityClass)));
             restrictions.add(new Restriction("auditingType", AuditingType.DELETE));
             auditings = new LazyDataModelImpl<>("eventDate DESC", restrictions, baseDAO);
         }
@@ -72,45 +74,37 @@ public class AuditDeleteBean implements Serializable {
     public Object newBeanInstance(AbstractAuditing auditingDelete) {
         try {
 
-            Object newInstance = entity.newInstance();
-            PropertyUtils.setProperty(newInstance, EntityUtils.getIdFieldName(entity), auditingDelete.getIdentifier());
+            Object newInstance = entityClass.getDeclaredConstructor().newInstance();
+            PropertyUtils.setProperty(newInstance, EntityUtils.getIdFieldName(entityClass), auditingDelete.getIdentifier());
 
             return newInstance;
-        } catch (Exception ex) {
+        } catch (IllegalAccessException | IllegalArgumentException | InstantiationException | NoSuchMethodException | SecurityException | InvocationTargetException ex) {
             logger.log(Level.SEVERE, null, ex);
         }
         return null;
     }
 
     public String getObjectDescripton(List<AbstractMetadata> metadatas) {
-        StringBuilder builder = new StringBuilder();
-
-        if (metadatas != null && !metadatas.isEmpty()) {
-            builder.append("[");
-            boolean comma = false;
-            for (AbstractMetadata metadata : metadatas) {
-                if (comma) {
-                    builder.append(", ");
-                }
-                builder.append("<b>").append(metadata.getField());
-                builder.append(": ").append("</b>");
-                builder.append(metadata.getNewValue());
-                if (comma == false) {
-                    comma = true;
-                }
-            }
-            builder.append("[");
+        if (metadatas == null || metadatas.isEmpty()) {
+            return "";
         }
-
-        return builder.toString();
+        return metadatas.stream()
+                .map(metadata -> String.format("<b>%s: </b>%s", metadata.getField(), metadata.getNewValue()))
+                .collect(Collectors.joining(", ", "[", "]"));
     }
 
-    public Class getEntity() {
-        return entity;
+    public void detailAll(AbstractAuditing audit) {
+        if (!audit.isDetail()) {
+            audit.setDetail(true);
+        }
     }
 
-    public void setEntity(Class entity) {
-        this.entity = entity;
+    public Class getEntityClass() {
+        return entityClass;
+    }
+
+    public void setEntityClass(Class entity) {
+        this.entityClass = entity;
     }
 
     public LazyDataModel<AbstractAuditing> getAuditings() {
@@ -124,6 +118,5 @@ public class AuditDeleteBean implements Serializable {
     public BaseDAO getBaseDAO() {
         return baseDAO;
     }
-    
-    
+
 }
